src/objects/Star_LabelVeroeffentlichung__c.object
<CustomObject>
    <fields>
        <fullName>Star_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Label Veröffentlichungen</relationshipLabel>
        <relationshipName>Star_LabelVeroeffentlichungen</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Star_Album__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Album</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Star_DVD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DVD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Star_Jahr__c</fullName>
        <label>Jahr</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
                <value>
                    <fullName>2031</fullName>
                </value>
                <value>
                    <fullName>2032</fullName>
                </value>
                <value>
                    <fullName>2033</fullName>
                </value>
                <value>
                    <fullName>2034</fullName>
                </value>
                <value>
                    <fullName>2035</fullName>
                </value>
                <value>
                    <fullName>2036</fullName>
                </value>
                <value>
                    <fullName>2037</fullName>
                </value>
                <value>
                    <fullName>2038</fullName>
                </value>
                <value>
                    <fullName>2039</fullName>
                </value>
                <value>
                    <fullName>2040</fullName>
                </value>
                <value>
                    <fullName>2041</fullName>
                </value>
                <value>
                    <fullName>2042</fullName>
                </value>
                <value>
                    <fullName>2043</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Star_Kontakt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Kontakt</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Star_LabelVeroeffentlichungen</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Star_KuenstlerName__c</fullName>
        <label>Künstler Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Star_MonatQuartalVeroeffentlichung__c</fullName>
        <label>Monat/Quartal Veröffentlichung</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Januar</fullName>
                </value>
                <value>
                    <fullName>Februar</fullName>
                </value>
                <value>
                    <fullName>März</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>Mai</fullName>
                </value>
                <value>
                    <fullName>Juni</fullName>
                </value>
                <value>
                    <fullName>Juli</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>Oktober</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>Dezember</fullName>
                </value>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Star_Prioritaet__c</fullName>
        <label>Priorität</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Star_Single__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Single</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Star_Verkaufserwartung__c</fullName>
        <inlineHelpText>Verkaufserwartung in Units</inlineHelpText>
        <label>Verkaufserwartung</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Star_Veroeffentlichungsdatum__c</fullName>
        <label>Veröffentlichungsdatum</label>
        <type>Date</type>
    </fields>
    <label>Label Veröffentlichung</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Star_Prioritaet__c</columns>
        <columns>NAME</columns>
        <columns>Star_MonatQuartalVeroeffentlichung__c</columns>
        <columns>Star_Kontakt__c</columns>
        <columns>Star_Account__c</columns>
        <columns>Star_Verkaufserwartung__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Künstler Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Label Veröffentlichungen</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Star_ValidationOnDVDSingleAlbum</fullName>
        <active>true</active>
        <description>DVD. Album oder Single muss angekreuzt sein</description>
        <errorConditionFormula>AND((Star_Album__c = false),(Star_DVD__c = false),
(Star_Single__c = false))</errorConditionFormula>
        <errorMessage>Mindestens ein Typ der Veröffentlich muss angegeben werden</errorMessage>
    </validationRules>
</CustomObject>